harbor-oke/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  annotations:
    goldilocks.fairwinds.com/enabled: "true"
