harbor-oke/apply-mirror-registry-containerd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: apply-mirror-registry-crio
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: apply-mirror-registry-crio
  template:
    metadata:
      labels:
        name: apply-mirror-registry-crio
    spec:
      containers:
      - name: config-modifier
        image: busybox
        command:
          - sh
          - -c
          - |
            echo "Backing up existing CRI-O configuration..."
            echo "Updating CRI-O configuration..."
            sed -i 's#registries =.*#registries = ["harbor.lag0.com.br"]#' /host/etc/crio/crio.conf
            echo "Restarting CRI-O..."
            systemctl status crio
        securityContext:
          privileged: true
        volumeMounts:
        - mountPath: /host/etc/crio
          name: crio-config
          readOnly: false
      volumes:
      - name: crio-config
        hostPath:
          path: /etc/crio
          type: Directory
